robot  Adding:nl <diabetes#61586>

--- a/wiki/diabetes.wikitext
+++ b/wiki/diabetes.wikitext
@@ -12,3 +12,5 @@ From the classical Greek transliterated as "Diabainein" -"To pass through" it is
 *[[diabetic]]
 *[[diabetes mellitus]]
 *[[diabetes insipidus]]
+
+[[nl:diabetes]]
