robot  Adding:fi,hu <Dezember#1782>

--- a/wiki/Dezember.wikitext
+++ b/wiki/Dezember.wikitext
@@ -10,6 +10,8 @@
 [[Category:German months]]
 
 [[de:Dezember]]
+[[hu:Dezember]]
 [[nl:Dezember]]
 [[pl:Dezember]]
+[[fi:Dezember]]
 [[sv:Dezember]]
