robot  Adding:fi <sad#43068>

--- a/wiki/sad.wikitext
+++ b/wiki/sad.wikitext
@@ -23,6 +23,8 @@
 *Swedish: [[ledsen]] (1), [[sorgsen]] (1,3), [[olycklig]] (1,2)
 
 [[Category:Negative words]]
+[[Category:1000 English basic words]]
+
 [[es:sad]]
 [[hr:sad]]
-[[Category:1000 English basic words]]
+[[fi:Sad]]
