--- a/wiki/celery.wikitext
+++ b/wiki/celery.wikitext
@@ -13,9 +13,9 @@
 #:''Do you like celery?''
 
 ====Translations====
-*Chinese: [[芹菜]] ([[qin2cai4]])
+*Chinese: [[芹菜]] (qíncàa)
 *Dutch: [[selder]] ''m'', [[selderij]] ''m'', [[selderie]] ''m''
-*{{fi}}: [[selleri]]
+*Finnish: [[selleri]]
 *French: [[céleri]] ''m''
 *German: [[Sellerie]] ''f''
 *Greek: [[σέλινο]] ''n''
