--- a/wiki/celery.wikitext
+++ b/wiki/celery.wikitext
@@ -13,7 +13,7 @@
 #:''Do you like celery?''
 
 ====Translations====
-*Chinese: [[芹菜]] (qíncàa)
+*Chinese: [[芹菜]] (qíncài)
 *Dutch: [[selder]] ''m'', [[selderij]] ''m'', [[selderie]] ''m''
 *Finnish: [[selleri]]
 *French: [[céleri]] ''m''
