robot  Adding:fi <diabolical#76261>

--- a/wiki/diabolical.wikitext
+++ b/wiki/diabolical.wikitext
@@ -4,3 +4,5 @@
 #Of, or concerning the [[devil]]; [[satanic]].
 #[[Extremely]] [[wicked]] or [[cruel]]
 [[Category:Greek derivations]]
+
+[[fi:Diabolical]]
