--- a/wiki/s%C3%A1bado.wikitext
+++ b/wiki/s%C3%A1bado.wikitext
@@ -11,7 +11,7 @@
 '''sábado'''
 
 # [[Saturday]]. The 7th (7°) [[Wiktionary Appendix:Days of the Week|day of the week]], after [[Friday]] and before [[Sunday]].
-
+# [[sabbath]]
 [[Category:Spanish days of the week]]
 [[Category:Portuguese days of the week]]
 
