--- a/wiki/Sahara.wikitext
+++ b/wiki/Sahara.wikitext
@@ -4,3 +4,5 @@ From Arabic [[صحراء]], desert ('''Sahara Desert''' is thus a [[pleonasm]].)
 ===Proper noun===
 '''Sahara'''
 # A [[desert]] in North [[Africa]]
+
+[[pl:Sahara]]
