robot  Adding:fr,es <diccionario#3661>

--- a/wiki/diccionario.wikitext
+++ b/wiki/diccionario.wikitext
@@ -5,6 +5,8 @@
 # [[dictionary]]
 
 [[ca:Diccionario]]
+[[es:diccionario]]
+[[fr:diccionario]]
 [[hu:Diccionario]]
 [[nl:diccionario]]
 [[pt:Diccionario]]
