--- a/wiki/onion.wikitext
+++ b/wiki/onion.wikitext
@@ -7,7 +7,7 @@
 *Bulgarian: [[лук]] ''m''
 *[[Catalan]]: [[ceba]] ''f''
 *Croatian: [[crni luk]] ''m'', [[crveni luk]] ''m''
-*Chinese: [[洋蔥]] ([[洋葱]])
+*Chinese: [[洋蔥]] ([[洋葱]]), [[yang2cong1]]
 *Czech: [[cibule]] ''f''
 *Dutch: [[ui]] ''m'', [[ajuin]] ''f''
 *[[Esperanto]]: [[cepo]]
