--- a/wiki/elide.wikitext
+++ b/wiki/elide.wikitext
@@ -5,3 +5,4 @@
 '''to elide'''
 
 #To break or dash in pieces; to demolish; as, to elide the force of an argument; to cut off, as a vowel or a syllable, usually the final one.
+#To omit.
