Possible way of treating these <doufu#89737>

--- a/wiki/doufu.wikitext
+++ b/wiki/doufu.wikitext
@@ -1,5 +1,8 @@
-doufu (bean curd, tofu)
 
-Translations:
-
-*[[Chinese]]: [[豆腐]] (doufu, [[dou4fu3]])
+==Pinyin romanization==
+===d&#333;u===
+===dóu===
+===dŏu===
+===dòu===
+*dòufŭ, (dou4fu3)
+**[[豆腐]] (bean curd, tofu)
