+es <know-it-all#23713>

--- a/wiki/know-it-all.wikitext
+++ b/wiki/know-it-all.wikitext
@@ -16,3 +16,4 @@ From [[know]] + [[it]] + [[all]]
 *[[Dutch]]: [[betweter]] ''m'', [[wijsneus]] ''m''
 *[[French]]: [[pédant]] ''m'', [[pédante]] ''f''
 *[[Frisian]]: [[wiisprater]], [[wiisnoas]]
+*{{es}}: [[sabelotodo]]
