robot  Adding:sv,fi,pt,nl,ja,pl,et,ca,fr,it <Dienstag#90617>

--- a/wiki/Dienstag.wikitext
+++ b/wiki/Dienstag.wikitext
@@ -5,4 +5,15 @@
 Likely originates from Norse mythology's [[Odin]], plus [[German]] [[Tag]], making it "Odin's Day."
 
 [[Category: German days of the week]]
+
+[[ca:Dienstag]]
 [[de:Dienstag]]
+[[et:Dienstag]]
+[[fr:Dienstag]]
+[[it:Dienstag]]
+[[nl:Dienstag]]
+[[ja:Dienstag]]
+[[pl:Dienstag]]
+[[pt:Dienstag]]
+[[fi:Dienstag]]
+[[sv:Dienstag]]
