+de article <Katalonien#79973>

--- a/wiki/Katalonien.wikitext
+++ b/wiki/Katalonien.wikitext
@@ -1,11 +1,21 @@
+==German==
+===Proper noun===
+'''Katalonien'''
+
+# [[Catalonia]]
+
+====Related terms====
+*[[Katalanisch]] ''n''
+
+----
+
 ==Swedish==
 ===Proper noun===
 '''Katalonien'''
 
 #[[Catalonia]]; an autonomous region of [[Spain]]
 
-====See also====
+====Related terms====
 *[[katalonska]]
-
 
 [[sv:Katalonien]]
