/* Noun */  definition... <saber#37828>

--- a/wiki/saber.wikitext
+++ b/wiki/saber.wikitext
@@ -45,7 +45,7 @@ Alternative spelling of [[sabre]]
 ===Noun===
 [[Category:Spanish nouns]]
 '''saber''' ''m''
-
+# [[knowledge]]
 ====Translations====
 *Dutch: [[weten]] ''n''
 *French: [[savoir]] ''m''
