robot  Adding:pl <salty#29522>

--- a/wiki/salty.wikitext
+++ b/wiki/salty.wikitext
@@ -16,4 +16,5 @@
 *Romanian: [[sărat]] ''m'', [[sărată]] ''f''
 *Slovak: [[slaný]] ''m'', [[slaná]] ''f'', [[slané]] ''n'' (1, 2); [[pikantný]] ''m'', [[pikantná]] ''f'', [[pikantné]] ''n' (3)
 
+[[pl:Salty]]
 [[fi:Salty]]
