--- a/wiki/cioccolato.wikitext
+++ b/wiki/cioccolato.wikitext
@@ -1,4 +1,6 @@
 ==Italian==
+===Etymology===
+Spanish ''[[chocolate]]''
 ===Noun===
 '''cioccolato''' ''m'' (''plural'' '''cioccolati''')
 
@@ -6,6 +8,8 @@
 
 ====Related terms====
 *[[cioccolata]]
+*[[cioccolataio]]
+*[[cioccolatiere]]
 *[[cioccolatino]]
 
 [[it:cioccolato]]
