--- a/wiki/cioccolata.wikitext
+++ b/wiki/cioccolata.wikitext
@@ -2,4 +2,15 @@
 ===Noun===
 '''cioccolata''' ''f''
 
+# [[chocolate]] (drink)
 #[[lady chocolate]]
+
+===Adjective===
+'''cioccolata''' (''invariable'')
+
+# [[chocolate]]
+
+===Related terms===
+*[[cioccolatiera]]
+*[[cioccolato]]
+[[category:Italian nouns]]
