robot  Adding:sv <sample#95644>

--- a/wiki/sample.wikitext
+++ b/wiki/sample.wikitext
@@ -22,3 +22,5 @@
 '''to sample'''  ([[samples]], [[sampled]], [[sampling]])
 # To make or show something similar to; to match.
 # To take or to test a sample or samples of; as, to sample sugar, teas, wools, cloth.
+
+[[sv:sample]]
