--- a/wiki/sabiendas.wikitext
+++ b/wiki/sabiendas.wikitext
@@ -1,6 +1,6 @@
 == Spanish == 
 === Adverb === 
-'''sabiendas'''
+'''sabiendas'''<br>
 '''a sabiendas'''
 # [[knowingly]] 
 '''a sabiendas de que'''
