robot  Adding:fi,ru <sanity#94664>

--- a/wiki/sanity.wikitext
+++ b/wiki/sanity.wikitext
@@ -10,3 +10,6 @@ Latin ''[[sanitas]]'' 'health'.
 '''sanity'''
 # The condition of being [[sane]].
 # [[Reasonable]] and [[rational]] behaviour.
+
+[[ru:Sanity]]
+[[fi:Sanity]]
