robot  Adding:it <sango#24967>

--- a/wiki/sango.wikitext
+++ b/wiki/sango.wikitext
@@ -11,3 +11,5 @@ Sango (also spelt Sangho) is the primary [[language]] spoken in the [[Central Af
 *[[Greek]]: [[aima]]
 *[[Indonesian]]: [[darah]]
 *[[Latin]]: [[sangua]]
+
+[[it:sango]]
