robot  Adding:fr <sandstone#72012>

--- a/wiki/sandstone.wikitext
+++ b/wiki/sandstone.wikitext
@@ -2,3 +2,5 @@
 ===Noun===
 '''sandstone'''
 # A [[sedimentary]] [[rock]] produced by the [[consolidation]] and [[compaction]] of [[sand]], [[cement]]ed with [[clay]] etc.
+
+[[fr:sandstone]]
