--- a/wiki/sable.wikitext
+++ b/wiki/sable.wikitext
@@ -11,3 +11,10 @@
 [[et:Sable]]
 [[fr:sable]]
 [[gl:Sable]]
+----
+== Spanish == 
+=== Noun === 
+'''sable''' ''m'' 
+# [[saber]]; [[cutlass]]
+
+[[Category:Spanish nouns]]
