--- a/wiki/azoto.wikitext
+++ b/wiki/azoto.wikitext
@@ -1,7 +1,27 @@
 ==Esperanto==
 ===Noun===
 # [[nitrogen]] (archaic except in some compounds; word commonly used currently is [[nitrogeno]]).
+{{Universala Vortaro}}
+----
+
+==Italian==
+===Pronunciation===
+a<u>z</u>òto, /aˈdzɔto/
+===Noun===
+'''azoto''' ''m''
+
+# [[nitrogen]]
+
+===Related terms===
+*[[azoico]]
+*[[azotato]]
+*[[azotemia]]
+*[[azoturia]]
+
+===See also===
+*[[nitro-]]
+*[[nitroso]]
 
 [[eo:azoto]]
 [[Category:Esperanto language]]
-{{Universala Vortaro}}
+[[Category:Italian elements]]
