+adj, cat <sabor#99722>

--- a/wiki/sabor.wikitext
+++ b/wiki/sabor.wikitext
@@ -3,6 +3,8 @@
 '''sabor''' ''m'' 
 # [[flavor]]; [[taste]]
 
+=== Adjective ===
 '''sin sabor'''
 # [[tasteless]]; [[flavorless]]
 [[Category:Spanish nouns]]
+[[Category:Spanish adjectives]]
