wikified <house warming#99679>

--- a/wiki/house_warming.wikitext
+++ b/wiki/house_warming.wikitext
@@ -1,3 +1,5 @@
-== House warming ==
+==English==
 
- 1. The act of welcoming a person/family to their newly purchased house.
+===Noun===
+'''house warming''' ''or'' '''[[housewarming]]'''
+# The act of welcoming a person/family to their newly purchased house.
