robot  Adding:it <disbelief#96322>

--- a/wiki/disbelief.wikitext
+++ b/wiki/disbelief.wikitext
@@ -5,3 +5,5 @@
 '''disbelief'''  (''plural:'' '''[[disbeliefs]]''')
 # the condition of not [[believing]]
 #:''My sister cried out in '''disbelief''' when she heard that terrorists had crashed an airplane into the World Trade Center in New York City.''
+
+[[it:disbelief]]
