robot  Adding:pt <saudade#75287>

--- a/wiki/saudade.wikitext
+++ b/wiki/saudade.wikitext
@@ -7,3 +7,5 @@
 <!-- do not move welsh. it is claimed to be the only equivalent word in another language -->
 ====Translations====
 *Welsh: [[hiraeth]]
+
+[[pt:Saudade]]
