--- a/wiki/ossigeno.wikitext
+++ b/wiki/ossigeno.wikitext
@@ -1,8 +1,17 @@
 ==Italian==
+===Pronunciation===
+ossìgeno, /osˈsidʒeno/, /<tt>os"sidZeno</tt>/
 ===Noun===
 '''ossigeno''' ''m''
 
 #[[oxygen]]
 
+===Related terms===
+*[[ossiacido]]
+*[[ossidare]]
+*[[ossidrico]]
+*[[ossigenare]]
+*[[ossigenazione]]
+[[category:Italian nouns]]
 [[it:ossigeno]]
 [[sv:ossigeno]]
