--- a/wiki/ossigeno.wikitext
+++ b/wiki/ossigeno.wikitext
@@ -9,9 +9,10 @@ ossìgeno, /osˈsidʒeno/, /<tt>os"sidZeno</tt>/
 ===Related terms===
 *[[ossiacido]]
 *[[ossidare]]
+*[[ossido]]
 *[[ossidrico]]
 *[[ossigenare]]
 *[[ossigenazione]]
-[[category:Italian nouns]]
+[[category:Italian elements]]
 [[it:ossigeno]]
 [[sv:ossigeno]]
