--- a/wiki/sabbia.wikitext
+++ b/wiki/sabbia.wikitext
@@ -1,4 +1,8 @@
 ==Italian==
+===Etymology===
+Latin ''[[sabula]]''
+===Pronunciation===
+sàbbia, /ˈsabbja/, /<tt>"sabbja</tt>/
 ===Noun===
 '''sabbia''' ''f'' (''plural'' '''sabbie''')
 
@@ -15,3 +19,4 @@
 *[[sabbioso]]
 
 [[it:sabbia]]
+[[category:Italian nouns]]
