robot  Adding:fi <discussion#42168>

--- a/wiki/discussion.wikitext
+++ b/wiki/discussion.wikitext
@@ -16,7 +16,9 @@
 
 [[Category:Communication]]
 
+[[Category:1000 English basic words]]
+
 [[fr:discussion]]
 [[it:discussion]]
 [[la:Discussion]]
-[[Category:1000 English basic words]]
+[[fi:Discussion]]
