robot  Adding:pl <disillusion#91570>

--- a/wiki/disillusion.wikitext
+++ b/wiki/disillusion.wikitext
@@ -7,3 +7,5 @@
 [[Category:English nouns]]
 '''disillusion'''
 #the act or state of [[disenchanting]] or freeing from a false belief
+
+[[pl:Disillusion]]
