--- a/wiki/Syria.wikitext
+++ b/wiki/Syria.wikitext
@@ -33,6 +33,7 @@
 *Russian: [[Сирия]] (Siriya)
 *Spanish: [[Siria]] ''f''
 *Swedish: [[Syrien]]
+*Turkish: [[Suriye]]
 
 ===See also===
 *[[Countries of the world]]
