robot  Adding:gl <disparate#89751>

--- a/wiki/disparate.wikitext
+++ b/wiki/disparate.wikitext
@@ -19,4 +19,5 @@ From the Latin ''[[disparatus]]'', the past participle of ''[[disparare]]'' "to 
 # the degree to which a thing is disparate
 #: ''the '''disparateness''' of our group was truly our strength''
 
+[[gl:Disparate]]
 [[pl:Disparate]]
