--- a/wiki/garlic.wikitext
+++ b/wiki/garlic.wikitext
@@ -15,7 +15,7 @@
 *[[Alabama]]: [[kosòoma]]
 *Bulgarian: [[чесън]] (česən) ''m'', [[чеснов лук]] (česnov luk) ''m''
 *Chinese Characters: [[蒜]] (suàn)
-*Chinese: [[大蒜]] (dàsuàn); [[suan4tou2]] (2)
+*Chinese: [[大蒜]] (dàsuàn); [[蒜头]] (suàntóu) (2)
 *Croatian: [[češnjak]]
 *Czech: [[česnek]] ''m''
 *Danish: [[hvidlög]] ''c'' (1,2)
