robot  Adding:it <scanno#95240>

--- a/wiki/scanno.wikitext
+++ b/wiki/scanno.wikitext
@@ -5,3 +5,5 @@ From [[scan]], by analogy of [[typo]] as if from [[type]].
 ===Noun===
 '''scanno''' (plural: '''[[scannos]]''') <!-- not 'scannoes', again by analogy from 'typo' -->
 # A typographical error introduced by optical character recognition ([[OCR]]) software, which may mistake a letter or set of letters for a letter or set of letters of similar shape, as ''[[tum]]'' for ''[[turn]]'', or ''[[google:Dosition|Dosition]]'' for ''[[position]].''
+
+[[it:scanno]]
