--- a/wiki/displacement.wikitext
+++ b/wiki/displacement.wikitext
@@ -12,3 +12,5 @@
 #:''"The '''displacement''' of the sun by parallax."''  -Whewell.
 # The quantity of anything, as water, displaced by a floating body, as by a ship, the weight of the displaced liquid being equal to that of the displacing body.
 # ''(Chemistry):'' The process of extracting soluble substances from organic material and the like, whereby a quantity of saturated solvent is displaced, or removed, for another quantity of the solvent.
+
+[[it:displacement]]
