robot  Adding:pl <scenic#94714>

--- a/wiki/scenic.wikitext
+++ b/wiki/scenic.wikitext
@@ -8,3 +8,5 @@
 '''scenic'''
 #of or relating to (usually nice) [[view]]s or [[scenery]]
 #:''We have plenty of time lets take the [[scenic route]].''
+
+[[pl:Scenic]]
