--- a/wiki/onion.wikitext
+++ b/wiki/onion.wikitext
@@ -1,3 +1,6 @@
+==English==
+===Etymology===
+Latin ''[[unio]]'' (doublet with [[union]]?)
 ===Noun===
 '''onion''' (plural: [[onions]])
 
@@ -7,7 +10,7 @@
 *Bulgarian: [[лук]] ''m''
 *[[Catalan]]: [[ceba]] ''f''
 *Croatian: [[crni luk]] ''m'', [[crveni luk]] ''m''
-*Chinese: [[洋蔥]] ([[洋葱]]), [[yang2cong1]]
+*Chinese: [[洋蔥]] / [[洋葱]] (yángcōng)
 *Czech: [[cibule]] ''f''
 *Dutch: [[ui]] ''m'', [[ajuin]] ''f''
 *[[Esperanto]]: [[cepo]]
@@ -18,6 +21,7 @@
 *[[Hausa]]: [[àlbásà]]
 *Hebrew: [[בצל]] ''m''
 *Hungarian: [[hagyma]] 
+*Japanese: [[たまねぎ]]
 *[[KiSwahili]]: [[kitunguu]]
 *Polish: [[cebula]] ''f''
 *Portuguese: [[cebola]] ''f''
