robot  Adding:it <dissemble#93266>

--- a/wiki/dissemble.wikitext
+++ b/wiki/dissemble.wikitext
@@ -3,3 +3,5 @@
 ===Verb===
 '''to dissemble'''  (''transitive'' or ''intransitive'')
 #to [[disguise]] or [[conceal]] something; to [[feign]]
+
+[[it:dissemble]]
