robot  Adding:pl <schizophrenia#99470>

--- a/wiki/schizophrenia.wikitext
+++ b/wiki/schizophrenia.wikitext
@@ -23,3 +23,5 @@ First attested [[w:1910|1910]], from [[Modern Latin]], from {{G.}} [[Schizophren
 *[[dementia praecox]]
 *[[schizophrenic disorder]]
 *[[schizophrenic psychosis]]
+
+[[pl:Schizophrenia]]
