robot  Adding:et,ca,de <dit#96174>

--- a/wiki/dit.wikitext
+++ b/wiki/dit.wikitext
@@ -29,3 +29,7 @@
 '''dit'''
 #[[there]]; to [[that]] [[place]]; that way, in that direction.
 #:''Jag har aldrig varit i London, men jag ska dit snart'' - I've never been to London, but I will get there soon
+
+[[ca:Dit]]
+[[de:dit]]
+[[et:Dit]]
