robot  Adding:it <disturb#91045>

--- a/wiki/disturb.wikitext
+++ b/wiki/disturb.wikitext
@@ -17,3 +17,5 @@ Latin ''[[disturbare]]'', intensifying for ''[[turbare]]'', "to throw into disor
 #:''His behaviour is very '''disturbing''.'''
 ===Derived terms===
 *[[disturbance]]
+
+[[it:disturb]]
