robot  Adding:pl,it <distraction#90093>

--- a/wiki/distraction.wikitext
+++ b/wiki/distraction.wikitext
@@ -7,3 +7,6 @@ See ''to [[distract]]''.
 #:''Poking one's eye is a good '''distraction''' from a hurting toe.''
 #the condition of being [[distract]]ed
 #:''We have to reduce '''distraction''' in class if we want students to achieve good results.''
+
+[[it:distraction]]
+[[pl:Distraction]]
