--- a/wiki/distract.wikitext
+++ b/wiki/distract.wikitext
@@ -5,3 +5,5 @@ From Latin ''[[distrahere]]'', "to pull apart", from ''[[dis-#Latin|dis-]]'', + 
 '''to distract''' ('''distracts''', '''distracted''', '''distracting''')
 #''(transitive)'' to [[divert]] the [[attention]] of
 #:''The crowd was '''distracted''' by a helicopter hovering over the stadium when the only goal of the game was scored.''
+
+[[it:distract]]
