robot  Adding:fi,hu,es <school#30914>

--- a/wiki/school.wikitext
+++ b/wiki/school.wikitext
@@ -131,9 +131,13 @@
 
 [[Category:Greek derivations]]
 
+[[Category:1000 English basic words]]
+
+[[es:school]]
 [[fr:school]]
 [[it:school]]
 [[la:School]]
+[[hu:school]]
 [[nl:school]]
 [[ru:School]]
-[[Category:1000 English basic words]]
+[[fi:School]]
