--- a/wiki/Welsh.wikitext
+++ b/wiki/Welsh.wikitext
@@ -22,6 +22,7 @@
 *[[Sasxsek]]: kxmrak
 *[[Slovak]]: [[Walešania]] ''m pl'' (1), [[waleština]] ''f'' (2)
 *[[Swedish]]: [[kymriska]], [[walesiska]], [[välska]]
+*[[Turkish]]: [[Galler]]
 *[[Welsh]]: [[Cymraeg]]. Mutations: [[Gymraeg]]
 
 ==Adjective==
