--- a/wiki/Welsh.wikitext
+++ b/wiki/Welsh.wikitext
@@ -22,7 +22,7 @@
 *[[Sasxsek]]: kxmrak
 *[[Slovak]]: [[Walešania]] ''m pl'' (1), [[waleština]] ''f'' (2)
 *[[Swedish]]: [[kymriska]], [[walesiska]], [[välska]]
-*[[Turkish]]: [[Galler]]
+*[[Turkish]]: [[Galce]]
 *[[Welsh]]: [[Cymraeg]]. Mutations: [[Gymraeg]]
 
 ==Adjective==
