robot  Adding:pt <divination#61642>

--- a/wiki/divination.wikitext
+++ b/wiki/divination.wikitext
@@ -6,3 +6,5 @@
 
 #The act of divining; a foreseeing or foretelling of future events; the pretended art discovering secret or future by preternatural means.
 #An indication of what is future or secret; augury omen; conjectural presage; prediction.
+
+[[pt:Divination]]
