robot  Adding:fi <divide#56130>

--- a/wiki/divide.wikitext
+++ b/wiki/divide.wikitext
@@ -144,3 +144,4 @@ From Latin '''[[dividere]]''', to divide
 # ''third-person singular indicative present of [[dividere]]''
 
 [[it:divide]]
+[[fi:Divide]]
