robot  Adding:zh <science#6670>

--- a/wiki/science.wikitext
+++ b/wiki/science.wikitext
@@ -78,10 +78,11 @@ Sometimes uncountable
 
 *[[wikipedia:en:science|Wikipedia on Science]]
 
+[[Category:Science]]
+[[Category:1000 English basic words]]
+
 [[et:Science]]
 [[fr:science]]
 [[fi:Science]]
 [[sv:science]]
-
-[[Category:Science]]
-[[Category:1000 English basic words]]
+[[zh:Science]]
