robot  Adding:it,sv,ca,nl,ja <dizionario#95020>

--- a/wiki/dizionario.wikitext
+++ b/wiki/dizionario.wikitext
@@ -4,3 +4,9 @@
 '''dizionario''' ''m'' (''plural'' '''dizionari''')
 
 #[[dictionary]]
+
+[[ca:Dizionario]]
+[[it:dizionario]]
+[[nl:dizionario]]
+[[ja:dizionario]]
+[[sv:dizionario]]
