--- a/wiki/document.wikitext
+++ b/wiki/document.wikitext
@@ -11,5 +11,6 @@
 #To teach; to school.
 #To furnish with documents or papers necessary to establish facts or give information; as, a a ship should be documented according to the directions of law.
 
+[[et:Document]]
 [[fr:document]]
 [[it:document]]
