--- a/wiki/Chordata.wikitext
+++ b/wiki/Chordata.wikitext
@@ -1,6 +1,6 @@
 ==English==
 ===Etymology===
-Latin ?
+Latin: [[chorda]] = [[chord]], [[catgut]], [[string]] 
 ===Proper noun===
 {{wikipedia}}
 '''Chordata'''
