robot  Adding:it <scout#62543>

--- a/wiki/scout.wikitext
+++ b/wiki/scout.wikitext
@@ -16,3 +16,5 @@
 '''to scout'''
 
 #To reject with contempt, as something absurd; to treat with ridicule; to flout; as, to scout an idea or an apology.
+
+[[it:scout]]
