--- a/wiki/Chordata.wikitext
+++ b/wiki/Chordata.wikitext
@@ -15,5 +15,6 @@ Latin: [[chorda]] = [[chord]], [[catgut]], [[string]]
 
 ====Translations====
 *Finnish: [[selkäjänteiset]]
+*German: [[Chordatiere]] ''f'' pl. [[:de:Chordatiere|(de)]], [[Chordata]] ''n'' pl. [[:de:Chordata|(de)]] 
 
 [[de:Chordata]]
