robot  Adding:zh,fr <dog#3649675>

--- a/wiki/dog.wikitext
+++ b/wiki/dog.wikitext
@@ -310,9 +310,12 @@ Not a borrowing from English, but an independent and regular development from th
 
 #dog
 
+[[Category:1000 English basic words]]
+
 [[ar:Dog]]
 [[de:dog]]
 [[es:dog]]
+[[fr:dog]]
 [[it:dog]]
 [[la:Dog]]
 [[hu:dog]]
@@ -324,4 +327,4 @@ Not a borrowing from English, but an independent and regular development from th
 [[fi:Dog]]
 [[sv:dog]]
 [[vi:dog]]
-[[Category:1000 English basic words]]
+[[zh:Dog]]
