--- a/wiki/Chordata.wikitext
+++ b/wiki/Chordata.wikitext
@@ -15,6 +15,7 @@ Latin: [[chorda]] = [[chord]], [[catgut]], [[string]]
 
 ====Translations====
 *Finnish: [[selkäjänteiset]]
+*French: [1] [[chordés]] ''m'' pl. [[:fr:chordés|(fr)]] (sg. chordé); [[cordés]] ''m'' pl. [[:fr:cordés|(fr)]] (sg. cordé)
 *German: [[Chordatiere]] ''f'' pl. [[:de:Chordatiere|(de)]], [[Chordata]] ''n'' pl. [[:de:Chordata|(de)]] 
 
 [[de:Chordata]]
