--- a/wiki/noodle.wikitext
+++ b/wiki/noodle.wikitext
@@ -17,9 +17,9 @@
 |bgcolor="#FFFFE0" valign=top width=48%|
 {|
 <!--languages from A to I go here-->
-*Chinese: [[麵條]], [[面条]] ([[mian4tiao2]])
+*Chinese: [[麵條]], [[面条]] (miàntiáo)
 *Dutch: [[noedel]] ''m''
-*{{fi}}: [[nuudeli]]
+*Finnish: [[nuudeli]]
 *French: [[nouille]] ''f''
 *German: [[Nudel]] ''f''
 *Italian: (''string'') [[taglierino]] ''m'', (''strip'') [[tagliatella]] ''f''
@@ -31,7 +31,7 @@
 *Japanese: [[ヌードル]]
 *Korean: [[국수]]
 *Russian: [[лапша]] ''f''
-*{{sk}}: [[slíž]] ''m'', [[rezanec]] ''m''
+*Slovak: [[slíž]] ''m'', [[rezanec]] ''m''
 *Spanish: [[tallarin]] ''m''
 *Swedish: [[nudel]] ''c''
 |}
