robot  Adding:zh <dolphin#53839>

--- a/wiki/dolphin.wikitext
+++ b/wiki/dolphin.wikitext
@@ -44,6 +44,8 @@ Via French from Latin ''[[delphinus]]'', from Greek ''[[δελφίνι]]'' (delf
 *[[seal]]
 *[[whale]]
 
+[[Category:Greek derivations]]
+
 [[gl:Dolphin]]
 [[it:dolphin]]
-[[Category:Greek derivations]]
+[[zh:Dolphin]]
