robot  Adding:pl <doler#93713>

--- a/wiki/doler.wikitext
+++ b/wiki/doler.wikitext
@@ -30,3 +30,5 @@ While in english the verb to [[hurt]] in this sense is [[intransitive]], [[doler
 *[[inferma]]
 *[[mareado]]
 *[[roto]]
+
+[[pl:Doler]]
