--- a/wiki/rase.wikitext
+++ b/wiki/rase.wikitext
@@ -16,6 +16,16 @@
 
 ----
 
+==French==
+===Verb form===
+'''rase'''
+
+# ''first-, third-person singular indicative present of [[raser]]''
+# ''first-, third-person singular subjunctive present of raser''
+# ''second-person singular imperative of raser''
+
+----
+
 ==Italian==
 ===Verb form===
 '''rase'''
