--- a/wiki/water.wikitext
+++ b/wiki/water.wikitext
@@ -57,7 +57,7 @@ From Middle English, from Old English [[wæter]]. Cognates include [[wet]], Gree
 *[[Catalan]]: [[aigua]] ''f''
 *[[Chechen]]: (khi)
 *[[Cherokee]]: [[ᎠᎹ]] (ama)
-*Chinese: [[水]] (shŭi, [[shui3]])
+*Chinese: [[水]] (shŭi)
 *Czech: [[voda]] ''f''
 *[[Cornish]]: [[dowr]] ''m''
 *Danish: [[vand]]
@@ -120,7 +120,6 @@ From Middle English, from Old English [[wæter]]. Cognates include [[wet]], Gree
 *Portuguese: [[água]] ''f''
 *[[Quenya]]: [[]] (nén)
 *Romanian: [[apă]] ''f''
-*[[Romanica]]: [[aqua]] ''f''
 *Russian: [[вода]] (voda) ''f''
 *[[Samoan]]: [[vai]]
 *Serbian: [[вода]] (voda) ''f''
@@ -157,7 +156,7 @@ From Middle English, from Old English [[wæter]]. Cognates include [[wet]], Gree
 {|
 <!--languages from A to I go here-->
 *[[Czech]]: [[minerálka]]
-*{{nl}}: [[mineraalwater]] ''n''
+*Dutch: [[mineraalwater]] ''n''
 *Finnish: [[vesi]], [[mineraalivesi]]
 *Galician: [[auga]] mineral ''f''
 *Hebrew: [[מים מינרלים]]
@@ -177,7 +176,7 @@ From Middle English, from Old English [[wæter]]. Cognates include [[wet]], Gree
 |bgcolor="#FFFFE0" valign=top width=48%|
 {|
 <!--languages from A to I go here-->
-*{{nl}}: [[bronwater]] ''n'', [[spawater]] ''n''
+*Dutch: [[bronwater]] ''n'', [[spawater]] ''n''
 *Finnish: [[kylpy]]
 |}
 | width=1% |
