--- a/wiki/script.wikitext
+++ b/wiki/script.wikitext
@@ -12,3 +12,5 @@
 # The written document containing the dialogue and action for a drama; the text of a stage play, movie, or other performance. Especially, the final form used for the performance itself.
 
 {{webster}}
+
+[[de:Skript]]
