robot  Adding:pl,it <dominate#94654>

--- a/wiki/dominate.wikitext
+++ b/wiki/dominate.wikitext
@@ -6,3 +6,6 @@
 #To [[enjoy]] a [[commanding]] [[position]] in some field
 #To [[overlook]] from a [[height]]
 [[category:English verbs]]
+
+[[it:dominate]]
+[[pl:Dominate]]
