robot  Adding:fi <domenica#66619>

--- a/wiki/domenica.wikitext
+++ b/wiki/domenica.wikitext
@@ -9,8 +9,10 @@ Latin ''dies [[dominica]]''
 ===Related terms===
 *[[domenicale]]
 [[Category:Italian days of the week]]
+
 [[it:domenica]]
 [[nl:domenica]]
 [[ja:domenica]]
 [[pl:Domenica]]
 [[pt:Domenica]]
+[[fi:Domenica]]
