--- a/wiki/water.wikitext
+++ b/wiki/water.wikitext
@@ -287,7 +287,7 @@ The translations below need to be checked by native speakers and inserted into t
 *[[Catalan]]: [[regar]]
 *Czech: [[zalévat]]
 *Dutch: [[water geven]], [[sproeien]]
-*{{et}}: [[kastma]]
+*Estonian: [[kastma]]
 *Finnish: [[kastella]]
 *French: [[arroser]]
 *German: [[gießen]], [[bewässern]]
@@ -298,7 +298,7 @@ The translations below need to be checked by native speakers and inserted into t
 *Italian: [[annaffiare]]
 *Polish: [[podlewać]]
 *Portuguese: [[regar#Portuguese|regar]]
-*{{ro}}: [[uda]]
+*Romanian: [[uda]]
 *Spanish: [[regar#Portuguese|regar]]
 *Swedish: [[vattna]]
 |}
@@ -317,7 +317,6 @@ The translations below need to be checked by native speakers and inserted into t
 *[[Interlingua]]: [[aquar]], [[rigar]]
 *Lithuanian: [[laistyti]]
 *Norwegian: [[vanne]]
-*[[Romanica]]: [[aquar]], [[rigar]]
 *[[Tupinambá]]: [[mbo'y]]
 *[[Volapük]]: [[vatön]]
 
