--- a/wiki/Christ.wikitext
+++ b/wiki/Christ.wikitext
@@ -34,6 +34,9 @@ From Greek [[Χριστος]] (Χριστ-ος), 'anointed' or [[Messiah]].
 ----
 
 ==French==
+===Pronunciation===
+/krist/
+:'''Jésus-Christ''': /ʒesykri/ (''Catholic''), /ʒesykrist/ (''Protestant'')
 ===Proper noun===
 '''Christ''' (''Catholic'') , '''le Christ''' (''Protestant'') ''m''
 
