robot  Adding:sv,fi,pt,nl,ja,pl,et,fr,it <Donnerstag#90622>

--- a/wiki/Donnerstag.wikitext
+++ b/wiki/Donnerstag.wikitext
@@ -6,4 +6,14 @@ Likely meaning "Thor's Day" or "Thunder Day", from [[Donner]] and [[Tag]].
 #[[Thursday]], the day following Wednesday and preceeding Friday. In German Donnerstag Donnerstag follows [[Mittwoch]] and preceeds [[Freitag]].
 
 [[Category:German days of the week]]
+
 [[de:Donnerstag]]
+[[et:Donnerstag]]
+[[fr:Donnerstag]]
+[[it:Donnerstag]]
+[[nl:Donnerstag]]
+[[ja:Donnerstag]]
+[[pl:Donnerstag]]
+[[pt:Donnerstag]]
+[[fi:Donnerstag]]
+[[sv:Donnerstag]]
