--- a/wiki/horse.wikitext
+++ b/wiki/horse.wikitext
@@ -39,7 +39,7 @@ From [[Middle English]], from [[Old English]] [[hors]].
 *'''Bulgarian''': [[кон]] ''m'' (kon)
 *'''Catalan''': [[cavall]]
 *'''Cebuano''': [[kabayo]]
-*'''Chinese''': [[馬]], [[马]] (mǎ, ma, [[ma3]])
+*'''Chinese''': [[馬]], [[马]] (mǎ)
 *'''Croatian''': [[konj]]
 *'''Czech''': [[kůň]]
 *'''Danish''': [[hest]]
