--- a/wiki/Christ.wikitext
+++ b/wiki/Christ.wikitext
@@ -5,7 +5,7 @@ From Greek [[Χριστος]] (Χριστ-ος), 'anointed' or [[Messiah]].
 ===Pronunciation===
 *[[w:AHD|AHD]]: krīst
 *[[w:IPA|IPA]]: /kraɪst/
-*[[w:SAMPA|SAMPA]]: /kraIst/
+*[[w:SAMPA|SAMPA]]: /<tt>"kraIst</tt>/
 
 ===Proper Noun===
 #(''Christianity'') ''Lit.'' The annointed one.  The [[messiah]] who was named Jesus Christ.
