--- a/wiki/dossier.wikitext
+++ b/wiki/dossier.wikitext
@@ -3,6 +3,7 @@
 '''dossier'''
 # A [[collection]] of [[paper]]s, or other [[source]]s,  containing [[detail]]ed [[information]] about a particular [[person]] or [[subject]], together with a [[synopsis]] of their content.
 
+[[et:Dossier]]
 [[fr:dossier]]
 [[nl:dossier]]
 [[pl:Dossier]]
