robot  Adding:sv,fi <double bass#99305>

--- a/wiki/double_bass.wikitext
+++ b/wiki/double_bass.wikitext
@@ -3,3 +3,6 @@
 ===Noun===
 '''[[double]] [[bass]]'''
 #the largest stringed instrument of the [[violin]] family
+
+[[fi:Double bass]]
+[[sv:double bass]]
