robot  Adding:nl <dour#90799>

--- a/wiki/dour.wikitext
+++ b/wiki/dour.wikitext
@@ -4,3 +4,5 @@
 # [[stern]], [[harsh]] and [[forbidding]]
 # [[gloomy]] and [[sullenly]] [[unhappy]]
 # [[unyielding]] and [[obstinate]]
+
+[[nl:dour]]
