robot  Adding:ru <drain#42185>

--- a/wiki/drain.wikitext
+++ b/wiki/drain.wikitext
@@ -30,3 +30,5 @@
 # To deplete of energy or resources.
 #: ''The stress of this job is really draining me.''
 [[Category:1000 English basic words]]
+
+[[ru:Drain]]
