[[boastfulness]] | [[bragging]] <jactancia#99751>

--- a/wiki/jactancia.wikitext
+++ b/wiki/jactancia.wikitext
@@ -1,1 +1,7 @@
-#REDIRECT [[Jactinto]]
+== Spanish == 
+=== Noun === 
+'''jactancia''' ''f'' 
+# [[boastfulness]] 
+# [[bragging]]
+
+[[Category:Spanish nouns]]
