robot  Adding:ru <dream#6859>

--- a/wiki/dream.wikitext
+++ b/wiki/dream.wikitext
@@ -190,5 +190,6 @@ The following translations need to be checked by native speakers and inserted in
 [[Category:English verbs]]
 
 [[it:dream]]
-[[fi:Dream]]
 [[pt:Dream]]
+[[ru:Dream]]
+[[fi:Dream]]
