robot  Adding:es <draw#5664>

--- a/wiki/draw.wikitext
+++ b/wiki/draw.wikitext
@@ -57,6 +57,7 @@
 *''quick on the draw'' (fast reactions)
 *''draw the line at'' (set a limit, especially of tolerance)
 
+[[es:draw]]
 [[it:draw]]
 [[ru:Draw]]
 [[sv:draw]]
