robot  Adding:fi,es <drive#6864>

--- a/wiki/drive.wikitext
+++ b/wiki/drive.wikitext
@@ -292,4 +292,6 @@ The original meaning was more like "to push".  The modern senses can all be seen
 *[[driven]]
 *[[drift]]
 
+[[es:drive]]
 [[it:drive]]
+[[fi:Drive]]
