robot  Adding:fi <drop#42195>

--- a/wiki/drop.wikitext
+++ b/wiki/drop.wikitext
@@ -298,7 +298,9 @@
 
 #[[dropgoal]]
 
+[[Category:1000 English basic words]]
+
 [[it:drop]]
 [[nl:drop]]
 [[ru:Drop]]
-[[Category:1000 English basic words]]
+[[fi:Drop]]
