robot  Adding:sv <dromedary#8217>

--- a/wiki/dromedary.wikitext
+++ b/wiki/dromedary.wikitext
@@ -57,3 +57,5 @@
 *[[Ukrainian]]: [[дромадер]] ([[dromader]])
 *[[Upper Sorbian]]: [[(wjelbłud);]]
 *[[Welsh]]: [[camel rhedeg]]
+
+[[sv:dromedary]]
