/* Translations */ +da <harpoon#68901>

--- a/wiki/harpoon.wikitext
+++ b/wiki/harpoon.wikitext
@@ -7,6 +7,7 @@
 
 ====Translations====
 *Chinese: [[魚叉]], [[鱼叉]]
+*Danish: [[harpun]] ''c''
 *Dutch: [[harpoen]] ''de'' [[Category:Dutch nouns with incomplete gender]]
 *French: [[harpon]] ''m''
 *German: [[Harpune]] ''f''
