--- a/wiki/dog.wikitext
+++ b/wiki/dog.wikitext
@@ -10,8 +10,7 @@ From {{OE.}} [[docga]], of unknown origin, via {{ME.}} [[dogge]].
 [[Image:Beagle.png|thumb|A dog (a [[beagle]])]]
 
 === Noun ===
-[[Category:English nouns]]
-[[Category:English mammals]]
+[[Category:Mammals]]
 '''dog''' (''Plural:'' [[dogs]])
 
 # A member of the genus ''[[Canis]]'' (probably descended from the common [[wolf]]) that has been [[domesticated]] by man since prehistoric times; occurs in many breeds.
@@ -238,7 +237,7 @@ From {{OE.}} [[docga]], of unknown origin, via {{ME.}} [[dogge]].
 ''See [[andiron]]''
 
 ===Transitive verb===
-[[Category:English transitive verbs]]
+
 {{en-infl-reg-consonant|dog||g}}
 
 #To go after with the intent to catch.
@@ -272,7 +271,7 @@ From {{OE.}} [[docga]], of unknown origin, via {{ME.}} [[dogge]].
 *[[pup]], [[puppy]]
 
 ====See also====
-*[[w:Dog|Wikipedia article on dogs]]
+*{{Wikipedia}}
 
 ----
 
@@ -282,7 +281,6 @@ From {{OE.}} [[docga]], of unknown origin, via {{ME.}} [[dogge]].
 *[[w:IPA|IPA]]: /dɔx/
 
 ===Noun===
-[[Category:Dutch nouns]]
 '''dog''' ''m'' (''Plural:'' [[doggen]])
 
 #[[mastiff]]
@@ -294,7 +292,6 @@ From {{OE.}} [[docga]], of unknown origin, via {{ME.}} [[dogge]].
 
 ==Swedish==
 ===Verb===
-[[Category:Swedish verbs]]
 '''dog'''
 
 #(''past tense of [[dö]]'') [[die]]d
@@ -305,7 +302,6 @@ From {{OE.}} [[docga]], of unknown origin, via {{ME.}} [[dogge]].
 === Etymology ===
 Not a borrowing from English, but an independent and regular development from the proto-Australian word *'''gudaga''', thus: Mbabaram '''dog''' < *'''dwog(a)''' < *'''udwoga''' < *'''gudwaga''' < proto-Australian *'''gudaga'''. Cf. [[Dyirbal]] '''guda'''.
 ===Noun===
-[[Category:Mbabaram nouns]]
 '''dog'''
 
 #dog
