--- a/wiki/tree.wikitext
+++ b/wiki/tree.wikitext
@@ -35,7 +35,6 @@ From Middle English '''tree''' < Old English '''[[trēo]](w)''' (tree, wood, any
 *[[Aymara]]: [[khoka]]
 *[[Basque]]: [[zuhaitz]]
 *[[Breton]]: [[gwez]] ''collective noun'' [[gwezenn]] ''f singular''
-*[[Brithenig]]: [[arfur]] ''m''
 *Bulgarian: [[дърво]] (dərvo) ''n''
 *[[Catalan]]: [[arbre]] ''m''
 *[[Chichewa]]: [[mtengo]]
@@ -47,7 +46,7 @@ From Middle English '''tree''' < Old English '''[[trēo]](w)''' (tree, wood, any
 *[[Dyirbal]]: [[yugu]] ''(noun class IV)'', [[yuguɖaran]] ''dual'', [[yugu-yugu]] ''pl''
 *Dutch: [[boom]] ''m''
 *[[Esperanto]]: [[arbo]]
-*{{fi}}: [[puu]]
+*Finnish: [[puu]]
 *French: [[arbre]] ''m''
 *[[Frisian]]: [[beam]]
 *Galician: [[árbore]] ''f''
