+danish <ice age#90415>

--- a/wiki/ice_age.wikitext
+++ b/wiki/ice_age.wikitext
@@ -2,4 +2,8 @@
 ===Noun===
 {{wikipedia}}
 '''[[ice]] [[age]]'''
+
 #Any of several [[cold]] [[period]]s in the [[history]] of the [[earth]] marked by [[episode]]s of [[extensive]] [[glaciation]] [[alternating]] with episodes of [[relative]] [[warmth]]
+
+====Translations====
+*Danish: [[istid]] ''c''
