--- a/wiki/person.wikitext
+++ b/wiki/person.wikitext
@@ -25,7 +25,6 @@ Latin '''[[persona]]''' ("human being", "dramatic mask"); Etruscan '''phersu''' 
 *[[Basque]]: [[pertsona]] (1)
 *[[Belarusian]]: [[пэрсона]] (persona), [[асоба]] (asoba)
 *[[Breton]]: [[den]] ''m'' (1)
-*[[Brithenig]]: person ''f''
 *Bulgarian: [[човек]] (čovek) ''m'' (1)
 *[[Catalan]]: [[persona]] ''f'' (1)
 *Chinese: [[人]] (rén, ren2) (1)
@@ -40,7 +39,7 @@ Latin '''[[persona]]''' ("human being", "dramatic mask"); Etruscan '''phersu''' 
 *Greek: [[άτομον]] (átomon) ''n'' (1)
 *[[Guaraní]]: [[ava]] (1)
 *Hungarian: [[személy]]
-*{{ga}}: [[duine]]
+*Irish: [[duine]]
 *Indonesian: [[orang]] (1)]
 *[[Interlingua]]: [[persona]] (1)
 *Italian: [[persona]] ''f'' (1)
@@ -52,7 +51,6 @@ Latin '''[[persona]]''' ("human being", "dramatic mask"); Etruscan '''phersu''' 
 *[[Persian]]:  [[نفر|نَفَر]] (næfær), [[شخص|شَخص]] (šæxs) (1)
 *Portuguese: [[pessoa]] ''f'' (1)
 *Romanian: [[persoană]] ''f'' (1)
-*[[Romanica]]: [[persona]] (1)
 *Russian: [[персона]] (persóna) ''f'', [[лицо]] (litsó) ''n'', [[человек]] (čelovék) ''m'' (1)
 *Slovak: [[osoba#Slovak|osoba]] ''f'' (1)
 *Spanish: [[persona]] ''f'', [[individuo]], [[personaje]] (1)
