--- a/wiki/hand-me-down.wikitext
+++ b/wiki/hand-me-down.wikitext
@@ -5,4 +5,5 @@
 #an item that is passed along for someone else to use, often a piece of clothing or other item which has been outgrown by a older sibling and passed down to a younger one.
 
 ====Translations====
-*Dutch: [[afdankertje]]
+*Danish: ''[[aflagt]] [[stykke]] [[tøj]]''<!-- not wikified as a unit since doesn't seem to be idiomatic as a unit -->
+*Dutch: [[afdankertje]] [[Category:Dutch nouns with incomplete gender]]
