robot  Adding:nl <dura mater#95615>

--- a/wiki/dura_mater.wikitext
+++ b/wiki/dura_mater.wikitext
@@ -6,3 +6,5 @@ First attested circa [[w:1400|1400]], from Medieval Latin [[dura]] [[mater]] [[c
 ===Noun===
 '''dura mater''' {{wikipedia}}
 #The [[tough]] and [[inflexible]] [[outermost]] of the three [[layer]]s of the [[meninges]]
+
+[[nl:dura mater]]
