--- a/wiki/person.wikitext
+++ b/wiki/person.wikitext
@@ -11,14 +11,12 @@ Latin '''[[persona]]''' ("human being", "dramatic mask"); Etruscan '''phersu''' 
 #[[Human being]]; [[individual]]
 #Specific [[human being]]. ''Where is the '''person'''?''
 #[[Body]] <!-- needs revising; also is this a legal term? -->
-#:''I have no money on my '''person'''.''
-#Anything having legal equivalence to a human being.
-#:''According to the Supreme Court of the United States, a [[corporation]] is legally entitled to the rights of a '''person'''.''
+#:'''2004:''' Meanwhile, the dazed Sullivan, dressed like a bum with no identification on his '''person''', is arrested and put to work on a brutal Southern chain gang.'' — ''New York Times''
+#''(Law):'' Any individual or formal organization with [[standing]] before the courts
+#:''By common law a [[corporation]] or a [[trust]] is legally a '''person'''.''
 #{{grammar}}: A linguistic category used to distinguish between the speaker of an utterance and those to whom or about whom he is speaking.
 #:''[[first-person plural]]''
 
-====Quotations====
-* (2): ''Meanwhile, the dazed Sullivan, dressed like a bum with no identification on his '''person''', is arrested and put to work on a brutal Southern chain gang.'' — ''New York Times'', 2004
 
 ====Translations====
 *Arabic: [[شخص|شَخص]] {{IPA|(ʃáxʂ)}} (1)
