/* {{trans}} */ +da <material#55530>

--- a/wiki/material.wikitext
+++ b/wiki/material.wikitext
@@ -20,8 +20,9 @@
 #: ''We were a warm-up act at the time; we didn't have enough original material to headline.''
 
 ===={{trans}}====
-* {{fr}} : [[matériau]]
-* {{sv}} : [[material]] ''n'' (1,3)
+* Danish: [[tøj]] ''n''
+* {{fr}}: [[matériau]]
+* {{sv}}: [[material]] ''n'' (1,3)
 
 ===Related Terms===
 *[[matter]]
