--- a/wiki/clothing.wikitext
+++ b/wiki/clothing.wikitext
@@ -4,10 +4,11 @@
 
 # [[clothes]], wearing [[apparel]]
 
-
+====Translations====
+*Danish: [[tøj]] ''n''
 *{{nv}}: [[éé']]
 
-===Related Terms===
+===See also===
 *[[belt]]
 *[[bra]]
 *[[briefs]]
