--- a/wiki/person.wikitext
+++ b/wiki/person.wikitext
@@ -10,7 +10,7 @@ Latin '''[[persona]]''' ("human being", "dramatic mask"); Etruscan '''phersu''' 
 
 #[[Human being]]; [[individual]]
 #Specific [[human being]]. ''Where is the '''person'''?''
-#[[Body]] <!-- needs revising; also is this a legal term? -->
+#The physical [[body]] of a specified individual
 #:'''2004:''' Meanwhile, the dazed Sullivan, dressed like a bum with no identification on his '''person''', is arrested and put to work on a brutal Southern chain gang.'' — ''New York Times''
 #''(Law):'' Any individual or formal organization with [[standing]] before the courts
 #:''By common law a [[corporation]] or a [[trust]] is legally a '''person'''.''
