--- a/wiki/chase.wikitext
+++ b/wiki/chase.wikitext
@@ -70,4 +70,7 @@
 '''to chase'''
 #{{Cricket}} (of a side batting last) To attempt to score the required number of runs to win.
 
+===Translations to be categorised===
+*Danish: [[jagte]]
+
 [[it:chase]]
