--- a/wiki/Dutch.wikitext
+++ b/wiki/Dutch.wikitext
@@ -116,6 +116,7 @@
 *[http://www.websters-online-dictionary.org/definition/Dutch-english/ Dutch - English Dictionary]: from [http://www.websters-online-dictionary.org/ Webster's Dictionary] - the Rosetta Edition.
 *[http://www.canuckabroad.com/language/dutch.shtml Dutch Travel Phrases] - Translations of common English phrases into Dutch
 
+[[fr:Dutch]]
 [[gu:Dutch]]
 [[hi:Dutch]]
 [[nl:Dutch]]
