--- a/wiki/Brithenig.wikitext
+++ b/wiki/Brithenig.wikitext
@@ -4,4 +4,6 @@
 # An invented language based on the premise of [[Latin]] being influenced by [[Old Celtic]].
 
 ===See also===
-*[[w:Brithenig|Wiktionary article on Brithenig]]
+{{Wikipedia}}
+
+[[Category:Constructed languages]]
