--- a/wiki/d%C3%A1n.wikitext
+++ b/wiki/d%C3%A1n.wikitext
@@ -8,6 +8,8 @@
 #a person from [[Denmark]] or of [[Danish]] descent
 #the official [[language]] of [[Denmark]]
 
-[[hu:Dán]]
 [[Category:Hungarian adjectives]]
 [[Category:Hungarian nouns]]
+
+[[hu:dán]]
+[[nl:dán]]
