--- a/wiki/hello.wikitext
+++ b/wiki/hello.wikitext
@@ -24,7 +24,7 @@ This variant of [[hallo]] is sometimes falsely credited to [[w:Thomas Edison|Tho
 #: ''You just tried to start your car with your cell phone.  Hello?''
 # (''somewhat dated'') An expression of puzzlement.
 #: ''Hello?  What's going on here.''
-# (''with specific pronunciation'') Used (usu. by male) to signify the arrival of an attractive female.  Origin from when the [[male]] or [[female]] would like to [[fuck]] the other [[sex]]. It is usually followed by lengthy [[chatting up]] and maybe a [[kiss]], [[snog]], or open [[fuck]]. They usually go back to one's house and [[fuck]] THE LIGHTS OUT OF EACH OTHER. Followed generally by a long, drawn out [[orgasm]] with moans of pleasure. Look for [[porn]] for more details, and pictures for [[sexual pleasure]].
+# (''with specific pronunciation'') Used (usu. by male) to signify the arrival of an attractive female.
 #: ''Hello.'' (length drawn out - 'Heeellloooo').
 
 ====Usage notes====
