--- a/wiki/siege.wikitext
+++ b/wiki/siege.wikitext
@@ -1,14 +1,13 @@
 ==English==
-
+{{Wikipedia}}
 ===Noun===
 '''siege'''
 
 # a prolonged military assault on a blockade of a city or fortress with the intent of conquering by force or attrition
-*[[w:Siege|Wikipedia article on Siege]]
 
 
 ====Translations====
-*[[Chinese]] (simplified): [[围困]] ([[wei2kun4]])
+*[[Chinese]] (simplified): [[围困]] (wéikùn)
 *Chinese (traditional): [[圍困]]
 *[[Dutch]]: [[belegering]]
 *[[Finnish]]: [[piiritys]]
