--- a/wiki/A-bomb.wikitext
+++ b/wiki/A-bomb.wikitext
@@ -12,10 +12,10 @@
 
 ==== Translations ====
 
-* [[Chinese]]: [[yuan2zi3dan4]]
+* Chinese: (yuánzĭdàn]]
 * German: [[Atombombe]] ''f''
 * Hebrew: [[פצצה אטומית|פְּצָצָה אֲטוֹמִית]] ''f''
-* {{sv}} : [[atombomb]] ''c''
+* Swedish: [[atombomb]] ''c''
 
 ===See also===
 *[[chain reaction]]
