--- a/wiki/A-bomb.wikitext
+++ b/wiki/A-bomb.wikitext
@@ -12,7 +12,7 @@
 
 ==== Translations ====
 
-* Chinese: (yuánzĭdàn]]
+* Chinese: (yuánzĭdàn)
 * German: [[Atombombe]] ''f''
 * Hebrew: [[פצצה אטומית|פְּצָצָה אֲטוֹמִית]] ''f''
 * Swedish: [[atombomb]] ''c''
