robot  Adding:fr <día#6451>

--- a/wiki/d%C3%ADa.wikitext
+++ b/wiki/d%C3%ADa.wikitext
@@ -9,5 +9,6 @@ From Latin ''[[dies]]'', [[day]].
 #Period of rotation of a planet: [[day]] (spec. Earth's 24 hours [[day]]).
 
 [[es:día]]
+[[fr:día]]
 [[hu:Día]]
 [[nl:día]]
