robot  Adding:fr <e-commerce#75273>

--- a/wiki/e-commerce.wikitext
+++ b/wiki/e-commerce.wikitext
@@ -5,3 +5,5 @@ Shortened form of '''electronic commerce'''.
 {{wikipedia}}
 '''E-commerce'''
 # [[Commercial]] activity conducted via the [[internet]].
+
+[[fr:e-commerce]]
