robot  Adding:pl <earth#4439>

--- a/wiki/earth.wikitext
+++ b/wiki/earth.wikitext
@@ -118,7 +118,9 @@
 *German: [[erden]]
 *[[Polish]]: uziemić (1), zakopać (2)
 
+[[Category:1000 English basic words]]
+
 [[it:earth]]
+[[pl:Earth]]
 [[ru:Earth]]
 [[fi:Earth]]
-[[Category:1000 English basic words]]
