robot  Adding:fr <each#48395>

--- a/wiki/each.wikitext
+++ b/wiki/each.wikitext
@@ -25,7 +25,9 @@
 
 [[Each and every]]
 
+[[Category:100 English basic words]]
+
+[[fr:each]]
 [[it:each]]
 [[pt:Each]]
 [[ru:Each]]
-[[Category:100 English basic words]]
