--- a/wiki/table.wikitext
+++ b/wiki/table.wikitext
@@ -26,7 +26,7 @@ From French ''table'', from Latin ''[[tabula]]'', '''[[tablet]]'''
 {|
 *Bulgarian: [[маса]] ''f''
 *[[Catalan]]: [[taula]] ''f''
-*Chinese: [[zhuo1zi]]
+*Chinese: (zhu&#333;zi)
 *Danish: [[bord#Danish|bord]]
 *Dutch: [[tafel]] ''f''
 *Finnish: [[pöytä]]
