robot  Adding:fi <easy#58172>

--- a/wiki/easy.wikitext
+++ b/wiki/easy.wikitext
@@ -47,5 +47,7 @@
 *[[ease]]<!-- check that it's really related -->
 *[[easy peasy]]
 
-[[it:easy]]
 [[Category:Positive words]]
+
+[[it:easy]]
+[[fi:Easy]]
