robot  Adding:pt,es <eau#39644>

--- a/wiki/eau.wikitext
+++ b/wiki/eau.wikitext
@@ -22,8 +22,10 @@
 :[[Baille]], [[flotte]], [[onde]],...
 
 [[et:Eau]]
+[[es:eau]]
 [[fr:eau]]
 [[nl:eau]]
 [[ja:eau]]
+[[pt:Eau]]
 [[ru:Eau]]
 [[zh:Eau]]
