--- a/wiki/desk.wikitext
+++ b/wiki/desk.wikitext
@@ -10,7 +10,7 @@ To shut up, as in a desk; to treasure.
 From [[Old English]] ''deske'', which is also the root of ''dish'' and ''disk''.
 
 ==Translations==
-# Chinese - [[shu1zhuo1]]
+# Chinese - (sh&#363;zhu&#333;)
 # Hebrew - [[שולחן]] ''m''
 # German - [[Schreibtisch]]
 # Polish - [[biurko]] ''n''
