--- a/wiki/monitor.wikitext
+++ b/wiki/monitor.wikitext
@@ -11,15 +11,15 @@ From Latin '''[[monitor]]''', '''[[warner]]''', from perfect passive participle 
 # class of warship designed for shore bombardment rather than combat with other ships.
 
 ====Translations====
-*[[Bosnian]]: [[monitor]] ''m'', (3) [[ekran]] ''m''
-*[[Chinese]]: [[jian1shi4qi4]]
-*[[German]]: (3) [[monitor]] ''m'', [[Bildschirm]] ''m''
-*[[Dutch]]: (3) [[monitor]], [[beeldscherm]]
-*[[French]]: (1) [[moniteur]] ''m'', monitrice ''f'', (3) [[écran]] ''m'', [[moniteur]] ''m''
-*[[Finnish]]: [[monitori]], [[näyttö]], [[näyttöpääte]]
-*[[Latin]]: [[monitor]] ''m''
-*[[Portuguese]]: monitor ''m''
-*[[Serbian]]: [[ekran]] ''m''
+*Bosnian: [[monitor]] ''m'', (3) [[ekran]] ''m''
+*Chinese: (ji&#257;nshìqì)
+*German: (3) [[monitor]] ''m'', [[Bildschirm]] ''m''
+*Dutch: (3) [[monitor]], [[beeldscherm]]
+*French: (1) [[moniteur]] ''m'', monitrice ''f'', (3) [[écran]] ''m'', [[moniteur]] ''m''
+*Finnish: [[monitori]], [[näyttö]], [[näyttöpääte]]
+*Latin: [[monitor]] ''m''
+*Portuguese: monitor ''m''
+*Serbian: [[ekran]] ''m''
 
 ===Transitive verb===
 '''to monitor''' (''[[present participle]]'' '''monitoring''', ''[[past tense]] and [[past participle]]'' '''monitored''')
