--- a/wiki/printer.wikitext
+++ b/wiki/printer.wikitext
@@ -8,12 +8,12 @@
 
 ====Translations====
 
-*Chinese: [[da3yin4ji1]] (3)
-*[[Finnish]]: [[painaja]] (1), [[tulostin]] (3)
+*Chinese: (dăyìnj&#299;)
+*Finnish: [[painaja]] (1), [[tulostin]] (3)
 *German: [[Drucker]] ''m'' (3)
-*[[Portuguese]]: [[impressora]]
-*[[Slovak]]: [[sadzač]] ''m'' (2, not the owner, just the worker), [[tlačiareň]] ''f'' (3)
-*[[Serbian]]: [[štampač]] ''m''
+*Portuguese: [[impressora]]
+*Slovak: [[sadzač]] ''m'' (2, not the owner, just the worker), [[tlačiareň]] ''f'' (3)
+*Serbian: [[štampač]] ''m''
 
 [[fr:printer]]
 [[pl:Printer]]
