--- a/wiki/efface.wikitext
+++ b/wiki/efface.wikitext
@@ -3,3 +3,5 @@
 '''efface''' ('''effeced''', '''effacing''')
 # To cause to [[disappear]] (as anything impressed or inscribed upon a surface) by rubbing out or striking out
 #to erase; to render illegible or [[indiscernible]]; as, to efface the letters on a [[monument]], or the inscription on a coin.
+
+[[fr:efface]]
