--- a/wiki/niece.wikitext
+++ b/wiki/niece.wikitext
@@ -1,7 +1,7 @@
+==English==
 ===Noun===
-'''niece'''
+'''niece''' ([[nieces]])
 
-====Meanings====
 #a [[daughter]] of someone's [[brother]] ([[fraternal]] niece)
 #a daughter of someone's [[sister]] ([[sororal]] niece)
 #a daughter of someone's [[brother-in-law]]
@@ -12,21 +12,22 @@
 *[[nephew]]
 
 ====Translations====
-*Catalan: [[neboda]] ''f'' [[:ca:neboda|(ca)]]
-*Chinese Characters: [[姪]]; [[甥]] (2, niece or nephew)
+*[[Catalan]]: [[neboda]] ''f'' [[:ca:neboda|(ca)]]
+*CJKV Characters: [[姪]]; [[甥]] (2, niece or nephew)
 *Chinese: [[甥女]]
 *Czech: neteř, neť, netinka  ''f'' (1-4)
+*Danish: niece
 *Dutch: [[nicht]] ''f'' (1-5)
 *[[Esperanto]]: [[nevino]] (1,2)
 *Estonian: [[vennatütar]] (1), [[õetütar]] (2)
 *Finnish: [[veljentytär]] (1), [[sisarentytär]] (2)
 *French: [[nièce]] ''f'' (1,2), [[nièce fraternelle]] (1), [[nièce sororelle]] (2)
-*German: [[Nichte]] ''f''(1,2), [[brüderliche Nichte]] (1), [[schwesterliche Nichte]] (2) [[:de:Nichte|(de)]]
+*German: [[Nichte]] ''f''(1,2), [[brüderliche Nichte]] (1), [[schwesterliche Nichte]] (2)
 *Greek: [[ανεψιά]] ''f'' (1,2)
-*[[Hebrew]]: [[נֶכְדָּנִית]] ''f'' (1,2)
+*Hebrew: [[נֶכְדָּנִית]] ''f'' (1,2)
 *Indonesian: [[keponakan]] / [[kemenakan]] / [[misan]] (either [[nephew]] or niece)
 *Japanese: [[姪]] (めい, mei)
-*[[Latin]]: [[filia fratris]] (1), [[filia sororis]] (2), [[filia fratris mariti]] (3), [[filia fratris uxoris]] (3), [[filia sororis mariti]] (4), [[filia sororis uxoris]] (4)
+*Latin: [[filia fratris]] (1), [[filia sororis]] (2), [[filia fratris mariti]] (3), [[filia fratris uxoris]] (3), [[filia sororis mariti]] (4), [[filia sororis uxoris]] (4)
 *Polish: [[siostrzenica]] ''f'' (2), [[bratanica]] ''f'' (1)
 *Romanian: [[nepoată]] ''f (1-5)
 *Slovak: neter  ''f''
