robot  Adding:sv <eigenvalue#52291>

--- a/wiki/eigenvalue.wikitext
+++ b/wiki/eigenvalue.wikitext
@@ -29,3 +29,4 @@ German ''[[eigen]]'', own + [[value]]
 *[http://mathworld.wolfram.com/Eigenvalue.html Mathworld article on eigenvalues]
 
 [[pt:Eigenvalue]]
+[[sv:eigenvalue]]
