/* Translations */ +da <clothes#38844>

--- a/wiki/clothes.wikitext
+++ b/wiki/clothes.wikitext
@@ -10,7 +10,8 @@
 
 ===Translations===
 *Chinese: [[衣服]] (yīfu)
-*Espranto: [[vestaĵo]]
+*Danish: [[tøj]] ''n''
+*[[Esperanto]]: [[vestaĵo]]
 *French: [[vêtements]]
 *German: (1): [[Kleidung]] ''f''
 
