wikification; zh compound <衣#26440>

--- a/wiki/%E8%A1%A3.wikitext
+++ b/wiki/%E8%A1%A3.wikitext
@@ -11,13 +11,12 @@
 * '''Graphical Significance and Origin''': 
 
 * '''Common Meaning'''
-*#clothes, clothing
-*# cover, skin
-
+*#[[clothes]], [[clothing]]
+*# [[cover]], [[skin]]
 
 ----
 
-== [[Chinese]] [[Hanzi]] ==
+== Chinese [[Hanzi]] ==
 
 * '''Romanizations'''
 ** '''[[Mandarin]]'''
@@ -29,11 +28,14 @@
 *** '''[[Penkyamp]]''': 
 *** '''[[Yale]]''': yi1
 
+* '''Compounds''':
+**[[衣服]]
+
 * '''Other info''': 
 
 ----
 
-== [[Japanese]] [[Kanji]] ==
+== Japanese [[Kanji]] ==
 
 * '''Readings'''
 ** '''[[On]]''': [[い]] (i), [[え]] (e)
@@ -43,9 +45,9 @@
 
 ----
 
-== [[Korean]] [[Hanja]] ==
+== Korean [[Hanja]] ==
 
-* '''[[Hangeul]]''': 의
+* '''[[Hangeul]]''': [[의]]
 
 * '''[[Eumhun]] reading''': 
 
