*Japanese: よい旅行を持ちなさい <bon voyage#58434>

--- a/wiki/bon_voyage.wikitext
+++ b/wiki/bon_voyage.wikitext
@@ -11,6 +11,7 @@ French: ''[[bon]]'', good, and ''[[voyage#French|voyage]]'', journey.
 *French: bon voyage
 *Greek, Modern: [[καλό ταξίδι]]
 *Italian: [[buon viaggio]]
+*Japanese: よい旅行を持ちなさい
 
 ----
 ==French==
