--- a/wiki/%E9%A0%92.wikitext
+++ b/wiki/%E9%A0%92.wikitext
@@ -13,13 +13,12 @@
 * '''Graphical Significance and Origin''': 
 
 * '''Common Meaning'''
-*#confer, bestow
-*# publish, promulgate
-
+*#[[confer]], [[bestow]]
+*# [[publish]], [[promulgate]]
 
 ----
 
-== [[Chinese]] [[Hanzi]] ==
+== Chinese [[Hanzi]] ==
 
 * '''Romanizations'''
 ** '''[[Mandarin]]'''
@@ -38,7 +37,7 @@
 
 ----
 
-== [[Japanese]] [[Kanji]] ==
+== Japanese [[Kanji]] ==
 
 * '''Readings'''
 ** '''[[On]]''': [[はん]] (han), [[ふん]] (fun)
@@ -48,9 +47,9 @@
 
 ----
 
-== [[Korean]] [[Hanja]] ==
+== Korean [[Hanja]] ==
 
-* '''[[Hangeul]]''': 반, 분
+* '''[[Hangeul]]''': [[반]], [[분]]
 
 * '''[[Eumhun]] reading''': 
 
