robot  Adding:pl,pt,es,gl,it <elemento#99061>

--- a/wiki/elemento.wikitext
+++ b/wiki/elemento.wikitext
@@ -10,3 +10,9 @@ eleménto, /eleˈmento/, /<tt>ele"mento</tt>/
 *[[elementare]]
 [[category:Italian nouns]]
 [[category:Italian elements|*]]
+
+[[es:elemento]]
+[[gl:Elemento]]
+[[it:elemento]]
+[[pl:Elemento]]
+[[pt:Elemento]]
