robot  Adding:hu <end#8123>

--- a/wiki/end.wikitext
+++ b/wiki/end.wikitext
@@ -76,7 +76,9 @@
 === Conjunction ===
 # [[than]] (in comparisons): ''Han er flere venlig end hun.'' (He is friendlier than she.)
 
+[[Category:200 English basic words]]
+
 [[et:End]]
 [[it:end]]
+[[hu:end]]
 [[pl:End]]
-[[Category:200 English basic words]]
