--- a/wiki/trust.wikitext
+++ b/wiki/trust.wikitext
@@ -7,7 +7,7 @@
 
 2. A business organization or combination consisting of a number of firms or corporations operating, and often united, under an agreement creating a trust (in sense 1), esp. one formed mainly for the purpose of regulating the supply and price of commodities, etc.; often, opprobriously, a combination formed for the purpose of controlling or monopolizing a trade, industry, or business, by doing acts in restraint or trade; as, a sugar trust. A trust may take the form of a corporation or of a body of persons or corporations acting together by mutual arrangement, as under a contract or a so-called gentlemen's agreement. When it consists of corporations it may be effected by putting a majority of their stock either in the hands of a board of trustees (whence the name trust for the combination) or by transferring a majority to a holding company. The advantages of a trust are partly due to the economies made possible in carrying    on a large business, as well as the doing away with competition. In the United States severe statutes against trusts have been passed by the Federal government and in  many States, with elaborate statutory definitions.
 
-3. Assured resting of the mind on the integrity, veracity, justice, friendship, or other sound principle, of another person; confidence; reliance; reliance. ``O ever-failing trust in mortal strength!'' --Milton.
+3. Assured resting of the mind on the integrity, veracity, justice, friendship, or other sound principle, of another person; confidence; reliance. ``O ever-failing trust in mortal strength!'' --Milton.
 
          Most take things upon trust.          --Locke.
 
