/* Category:Russian nouns */ <Юпитер#70601>

--- a/wiki/%D0%AE%D0%BF%D0%B8%D1%82%D0%B5%D1%80.wikitext
+++ b/wiki/%D0%AE%D0%BF%D0%B8%D1%82%D0%B5%D1%80.wikitext
@@ -1,5 +1,7 @@
 ==Russian==
+[[Category:Russian nouns]]
 ===Noun===
-'''Юпитер''' (Jupit'er)
+'''Юпитер''' (Jupíter) ''m''
 
-# [[Jupiter]]
+#''(astronomy)'' [[Jupiter]]
+#''(mythology)'' [[Jupiter]]
